--- a/_config.yml
+++ b/_config.yml
@@ -66,4 +66,6 @@ theme: carbon
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/innit/blog.git
+  branch: gh-pages
