--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://blog.innit.io
+url: http://innit.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -61,7 +61,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-theme: carbon
+theme: landscape
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
