--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -18,9 +18,9 @@ widgets:
 - recent_posts
 
 # Miscellaneous
-google_analytics:
+google_analytics: UA-61708644-1
 favicon: /favicon.png
-twitter:
-google_plus:
+twitter: robwormald
+google_plus: robwormald
 fb_admins:
 fb_app_id:
